Drop jdk9 support